goal card spacing fixes

--- a/style.css
+++ b/style.css
@@ -134,12 +134,17 @@ a:hover {
     margin-right:15px;
     padding-right:15px;
 }
+.report-card .guage {
+    display: table;
+    margin: 0px auto 10px;
+}
 .report-card .streaks {
     display:flex;
     justify-content:space-between;
 }
 .report-card .stat {
     text-align:center;
+    padding:0 10px;
 }
 .report-card .stat .number {
     display:block;
